[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/world.gd" type="Script" id=2]
[ext_resource path="res://scenes/base.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/restart.gd" type="Script" id=4]
[ext_resource path="res://sprites/Background.png" type="Texture" id=5]
[ext_resource path="res://sprites/b.png" type="Texture" id=6]
[ext_resource path="res://sprites/a.png" type="Texture" id=7]
[ext_resource path="res://sprites/LavaWithOutline.png" type="Texture" id=8]
[ext_resource path="res://fonts/m5x7.tres" type="DynamicFont" id=9]
[ext_resource path="res://sound/Coin.wav" type="AudioStream" id=10]
[ext_resource path="res://sound/LavaFried.wav" type="AudioStream" id=11]
[ext_resource path="res://sound/Game19.mp3" type="AudioStream" id=12]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 128, 128 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 100 )

[sub_resource type="Theme" id=4]
default_font = ExtResource( 9 )

[sub_resource type="StyleBoxFlat" id=6]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=5]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="World" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 1, 0.5 )
motion_mirroring = Vector2( 0, 256 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
margin_right = 256.0
margin_bottom = 256.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 0, 256 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer2"]
margin_right = 32.0
margin_bottom = 256.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="ParallaxBackground/ParallaxLayer2"]
margin_left = 224.0
margin_right = 256.0
margin_bottom = 256.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Platforms" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Coins" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Spikes" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Base" parent="." instance=ExtResource( 3 )]
position = Vector2( 98.5, 200 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 128, 200 )

[node name="Lava" type="Area2D" parent="."]
position = Vector2( 0, 300 )
__meta__ = {
"_edit_group_": true
}

[node name="TextureRect" type="TextureRect" parent="Lava"]
margin_top = -12.0
margin_right = 256.0
margin_bottom = 212.0
texture = ExtResource( 8 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lava"]
position = Vector2( 128, 128 )
shape = SubResource( 2 )

[node name="Walls" type="StaticBody2D" parent="."]
position = Vector2( 128, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls"]
position = Vector2( -112, 0 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls"]
position = Vector2( 113, 0 )
shape = SubResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 2.0
margin_right = 42.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 9 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="VBoxContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.5
margin_top = -28.0
margin_right = 38.5
margin_bottom = 28.0
theme = SubResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/GameOver"]
margin_right = 77.0
margin_bottom = 13.0
text = "Game Over!"
align = 1

[node name="Score" type="Label" parent="CanvasLayer/GameOver"]
margin_top = 17.0
margin_right = 77.0
margin_bottom = 30.0
text = "Score: 0"
align = 1

[node name="Restart" type="Button" parent="CanvasLayer/GameOver"]
pause_mode = 2
margin_top = 34.0
margin_right = 77.0
margin_bottom = 51.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 5 )
text = "Restart"
script = ExtResource( 4 )

[node name="Coin" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="Lava2" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 11 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -15.0
autoplay = true

[connection signal="area_entered" from="Lava" to="." method="_on_Lava_area_entered"]
[connection signal="body_entered" from="Lava" to="." method="_on_Lava_body_entered"]
